# datapi

./: .env  Cargo.toml  Dockerfile  README.md  api_client.py  docker-compose.yml  init.sql
api_responses/: 10_sort_by_value_desc.json  11_complex_query.json  1_health_check.json  2_get_all_sample_data.json  3_filter_by_date.json  4_filter_by_id_gte_3.json  5_filter_by_value_gt_150.json  6_multiple_filters.json  7_get_all_users.json  8_filter_by_name.json  9_pagination.json
src/: main.rs
